fix(css): posts on mobile devices

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -706,9 +706,6 @@ body.post {
     padding-top: 45px;
     max-width: var(--main-max-width);
     min-height: 100vh;
-    display: flex;
-    flex-column: column;
-    justify-content: space-between;
   }
 
   article {
